Mon Sep 17 11:36:47 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

        * Other Perl style changes in xml, network, service and other
	places.
	
	* file.pl.in (xst_file_rmtree): Got "Bad symbol for filehandle"
	fatal error with this code in Debian. Dunno why it appeared now,
	so I used something more "standard". Any comments on this?

	* ishare.pl.in: Ported to debian-2.2. Untested.

	* service.pl.in (xst_service_sysv_install_script): installs an
	initd script from the filesdir.

	* Makefile.am: Replace filesdir too.

	* service.pl.in (xst_service_sysv_set_links_active): Use %02d
	to format the priority number of the link.
	(xst_service_sysv_set_links_inactive): same.

	* util.pl.in (xst_util_read_boolean): Added "1" as a valid
	"true" representation.

	* replace.pl.in (xst_replace_sh_bool): Added optional parameters
	for true/false value representation.
	(xst_replace_sh_export_bool): same.

2001-09-19  Arturo Espinosa Aldama  <arturo@ximian.com>

	* Makefile.am (backends): Process runlevel-conf instead of sysv-conf.

	* sysv-conf.in -> runlevel-conf.in: Hans Petter said he didn't
	like the name, and I didn't like it either.

2001-09-19 Tambet Ingo   <tambet@ximian.com>

	* display-conf.in (distro_file): Rewrote to support possible irregular
	file config file locations in the future.

Sun Sep 16 13:30:28 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* configure.in: set filesdir variable too.

Wed Sep 12 21:42:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* sysv-conf.in (xml_parse_services): Parse array of available
	services.
	(xml_print): Print services array.
	(get): get available services array.

2001-09-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh62_parse_bootproto): If the
	bootproto is unknown, report error, default to none.
	(xst_network_suse70_parse_bootproto): same.

	* service.pl.in (xst_service_sysv_get_runlevels): added missing
	supported distros and removed bogus ones. Report an error if